Business goblin's finite state machine :alien:

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -23,6 +23,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scripts/finite_state_machine.gd"
 }, {
+"base": &"CharacterBody2D",
+"class": &"Player",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/Player.gd"
+}, {
 "base": &"Node",
 "class": &"State",
 "icon": "",
