--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Player.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Hero-sheet.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Assets/")
 dock_split_1=0
 dock_1="FileSystem"
 dock_3="Scene,Import"
@@ -30,15 +30,16 @@ dock_5="Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://Scenes/business_goblin.tscn", "res://Scenes/block_tile_map.tscn", "res://player.tscn")
-current_scene="res://Scenes/business_goblin.tscn"
+current_scene="res://player.tscn"
 center_split_offset=-516
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/business_goblin.gd", "res://Scripts/enemy_chase_state.gd", "res://Scripts/enemy_wander_state.gd", "res://Scripts/finite_state_machine.gd", "res://Scripts/Player.gd"]
-selected_script="res://Scripts/enemy_chase_state.gd"
+open_scripts=["res://Scripts/business_goblin.gd", "res://Scripts/enemy_chase_state.gd", "res://Scripts/enemy_wander_state.gd", "res://Scripts/Player.gd"]
+selected_script="res://Scripts/Player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
