:arrow_up: New enemy ambush state

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,9 +1,21 @@
 list=Array[Dictionary]([{
+"base": &"Node2D",
+"class": &"AnimationDirector",
+"icon": "res://Scripts/animation_director.svg",
+"language": &"GDScript",
+"path": "res://Scripts/animation_director.gd"
+}, {
 "base": &"CharacterBody2D",
 "class": &"Enemy",
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scripts/business_goblin.gd"
+}, {
+"base": &"State",
+"class": &"EnemyAmbushState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/enemy_ambush_state.gd"
 }, {
 "base": &"State",
 "class": &"EnemyChaseState",
@@ -34,4 +46,16 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scripts/state.gd"
+}, {
+"base": &"Node",
+"class": &"StateMachine",
+"icon": "res://state_machine/state_machine.svg",
+"language": &"GDScript",
+"path": "res://state_machine/state_machine.gd"
+}, {
+"base": &"Node",
+"class": &"StateMachineState",
+"icon": "res://state_machine/state_machine_state.svg",
+"language": &"GDScript",
+"path": "res://state_machine/state_machine_state.gd"
 }])
