--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Player.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Pot_enemy.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/", "res://Scenes/", "res://Assets/")
 dock_split_1=0
 dock_1="FileSystem"
 dock_3="Scene,Import"
@@ -29,16 +29,16 @@ dock_5="Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://Scenes/business_goblin.tscn", "res://Scenes/block_tile_map.tscn", "res://player.tscn")
+open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://player.tscn", "res://Scenes/business_goblin.tscn")
 current_scene="res://Scenes/business_goblin.tscn"
-center_split_offset=-516
+center_split_offset=-309
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/business_goblin.gd", "res://Scripts/enemy_chase_state.gd", "res://Scripts/enemy_wander_state.gd", "res://Scripts/finite_state_machine.gd", "res://Scripts/Player.gd"]
+open_scripts=["res://Scripts/animation_director.gd", "res://Scripts/business_goblin.gd", "res://Scripts/enemy_ambush_state.gd", "res://Scripts/enemy_chase_state.gd", "res://Scripts/enemy_wander_state.gd", "res://Scripts/finite_state_machine.gd", "res://Scripts/Player.gd"]
 selected_script="res://Scripts/business_goblin.gd"
 open_help=[]
 script_split_offset=70
