:fire: New enemy attack state

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -15,25 +15,31 @@ list=Array[Dictionary]([{
 "class": &"EnemyAmbushState",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Scripts/enemy_ambush_state.gd"
+"path": "res://States/enemy_ambush_state.gd"
 }, {
 "base": &"State",
 "class": &"EnemyChaseState",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Scripts/enemy_chase_state.gd"
+"path": "res://States/enemy_chase_state.gd"
+}, {
+"base": &"State",
+"class": &"EnemyShootState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://States/enemy_shoot_state.gd"
 }, {
 "base": &"State",
 "class": &"EnemyWanderState",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Scripts/enemy_wander_state.gd"
+"path": "res://States/enemy_wander_state.gd"
 }, {
 "base": &"Node",
 "class": &"FiniteStateMachine",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Scripts/finite_state_machine.gd"
+"path": "res://States/finite_state_machine.gd"
 }, {
 "base": &"CharacterBody2D",
 "class": &"Player",
