--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Pot_enemy.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/", "res://Scenes/", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://States/enemy_chase_state.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://States/")
 dock_split_1=0
 dock_1="FileSystem"
 dock_3="Scene,Import"
@@ -29,7 +29,7 @@ dock_5="Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/world.tscn", "res://player.tscn", "res://Scenes/business_goblin.tscn")
+open_scenes=PackedStringArray("res://Scenes/business_goblin.tscn", "res://Scenes/world.tscn")
 current_scene="res://Scenes/business_goblin.tscn"
 center_split_offset=-309
 selected_default_debugger_tab_idx=0
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/animation_director.gd", "res://Scripts/business_goblin.gd", "res://Scripts/enemy_ambush_state.gd", "res://Scripts/enemy_chase_state.gd", "res://Scripts/enemy_wander_state.gd", "res://Scripts/finite_state_machine.gd", "res://Scripts/Player.gd"]
+open_scripts=["res://Scripts/animation_director.gd", "res://Scripts/business_goblin.gd", "res://States/enemy_ambush_state.gd", "res://States/enemy_chase_state.gd", "res://States/enemy_shoot_state.gd", "res://States/enemy_wander_state.gd", "res://States/finite_state_machine.gd", "res://Scripts/Player.gd"]
 selected_script="res://Scripts/business_goblin.gd"
 open_help=[]
 script_split_offset=70
@@ -49,3 +49,13 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
