:fire: Updated shooting to a flamethrower

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=338
-dock_hsplit_2=606
+dock_hsplit_2=496
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://States/enemy_chase_state.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://States/")
+dock_filesystem_selected_paths=PackedStringArray("res://States/enemy_ambush_state.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://States/", "res://Scripts/", "res://Scenes/")
 dock_split_1=0
 dock_1="FileSystem"
 dock_3="Scene,Import"
@@ -29,17 +29,17 @@ dock_5="Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/business_goblin.tscn", "res://Scenes/world.tscn")
-current_scene="res://Scenes/business_goblin.tscn"
-center_split_offset=-309
-selected_default_debugger_tab_idx=0
+open_scenes=PackedStringArray("res://Scenes/shulker_robot.tscn", "res://Scenes/world.tscn", "res://Scenes/bullet.tscn", "res://Scenes/player.tscn")
+current_scene="res://Scenes/shulker_robot.tscn"
+center_split_offset=-264
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/animation_director.gd", "res://Scripts/business_goblin.gd", "res://States/enemy_ambush_state.gd", "res://States/enemy_chase_state.gd", "res://States/enemy_shoot_state.gd", "res://States/enemy_wander_state.gd", "res://States/finite_state_machine.gd", "res://Scripts/Player.gd"]
-selected_script="res://Scripts/business_goblin.gd"
+open_scripts=["res://Scripts/animation_director.gd", "res://Scripts/Bullet.gd", "res://States/enemy_ambush_state.gd", "res://States/enemy_chase_state.gd", "res://States/enemy_flamethrower_state.gd", "res://States/enemy_wander_state.gd", "res://States/enemy_shoot_state.gd", "res://States/finite_state_machine.gd", "res://Scripts/Flame_bullet.gd", "res://Scripts/Player.gd", "res://Scripts/shulker_robot.gd"]
+selected_script="res://States/enemy_shoot_state.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
