--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -9,7 +9,7 @@ list=Array[Dictionary]([{
 "class": &"Enemy",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Scripts/business_goblin.gd"
+"path": "res://Scripts/shulker_robot.gd"
 }, {
 "base": &"State",
 "class": &"EnemyAmbushState",
@@ -24,10 +24,16 @@ list=Array[Dictionary]([{
 "path": "res://States/enemy_chase_state.gd"
 }, {
 "base": &"State",
-"class": &"EnemyShootState",
+"class": &"EnemyFlameThrowerState",
 "icon": "",
 "language": &"GDScript",
 "path": "res://States/enemy_shoot_state.gd"
+}, {
+"base": &"State",
+"class": &"EnemyShootState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://States/enemy_flame_thrower_state.gd"
 }, {
 "base": &"State",
 "class": &"EnemyWanderState",
